--- a/default.hbs
+++ b/default.hbs
@@ -1,28 +1,127 @@
 <!DOCTYPE html>
 <html lang="{{lang}}">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{{meta_title}}</title>
-    <link rel="stylesheet" type="text/css" href="{{asset "css/app.css"}}">
-    {{ghost_head}}
-  </head>
-  <body class="{{body_class}}">
-    {{{body}}}
-    <footer>
-      <a href="{{@blog.url}}/rss/">
-        {{t "Subscribe via RSS!"}}
-      </a>
-      {{#if @labs.subscribers}}
-        {{subscribe_form placeholder=(t "youremail@example.com")}}
-      {{/if}}
-      <section>
-        <a href="{{@blog.url}}/">{{@blog.title}}</a>
-        &copy; {{date format="YYYY"}} &bull; {{t "All rights reserved."}}
-      </section>
-    </footer>
-    {{ghost_foot}}
-    <script type="text/javascript" src="{{asset "js/app.js"}}"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>{{meta_title}}</title>
+  <link rel="stylesheet" type="text/css" href="{{asset "css/core.min.css"}}">
+  <link rel="stylesheet" type="text/css" href="{{asset "css/skin.css"}}"> 
+  {{ghost_head}}
+</head>
+
+<body>
+  <div class="wrapper reveal-side-navigation">
+    <div class="wrapper-inner">
+      <div class="content clearfix">
+        {{{body}}}
+      </div>
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="footer-top">
+          <div class="row flex">
+            <div class="column width-6">
+              <div class="widget">
+                <h4 class="widget-title">Masternodes made easy&trade;</h4>
+                <p class="mb-20">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                  sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <ul class="social-list list-horizontal">
+                  <li>
+                    <a href="https://twitter.com/diviproject">
+                      <span className="icon-twitter-with-circle medium"></span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://facebook.com/diviproject">
+                      <span className="icon-facebook-with-circle medium"></span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/divicoin">
+                      <span className="icon-github-with-circle medium"></span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.youtube.com/channel/UCihooU0crqQkBOvV0_lsRnw?view_as=subscriber">
+                      <span className="icon-youtube-with-circle medium"></span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.linkedin.com/company/the-divi-project/">
+                      <span className="icon-linkedin-with-circle medium"></span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://medium.com/diviproject">
+                      <span className="icon-medium-with-circle medium"></span>
+                    </a>
+                  </li>
+                </ul>
+                <div class="divider hide show-on-mobile no-margin-top"></div>
+              </div>
+            </div>
+            <div class="column width-5 offset-1">
+              <div class="widget">
+                <h4 class="widget-title">Get Notified Of Updates</h4>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                  sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="signup-form-container">
+                  <div id="mc_embed_signup">
+                    <form action="https://diviproject.us16.list-manage.com/subscribe/post?u=042c6fe1249d1d0fcbdd2c9dc&amp;id=3a480d062b" method="post"
+                      id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" className="validate signup-form merged-form-elements"
+                      target="_blank" noValidate>
+                      <div className="row">
+                        <div className="column width-7">
+                          <div className="field-wrapper">
+                            <input type="email" name="email" className="email form-email form-element" tabIndex="2" placeholder="Email address" id="mce-EMAIL"
+                            />
+                          </div>
+                        </div>
+                        <div className="column width-4">
+                          <div aria-hidden="true">
+                            <input style="position: absolute; left: -5000px;" type="text" name="b_042c6fe1249d1d0fcbdd2c9dc_3a480d062b"
+                              tabIndex="-1" value="" />
+                          </div>
+                          <input type="submit" value="Signup" name="subscribe" id="mc-embedded-subscribe" className="button bkg-charcoal bkg-hover-theme color-white color-hover-white"
+                          />
+                        </div>
+                      </div>
+                      <div id="mc_embed_signup_scroll">
+
+                        {{!-- /* DO NOT REMOVE */ --}}
+                        <div id="mce-responses" className="clear">
+                          <div className="response" id="mce-error-response" style="display: none;"></div>
+                          <div className="response" id="mce-success-response" style="display: none;"></div>
+                        </div>
+                        {{!-- /* ^ DO NOT REMOVE ^ */ --}}
+
+                      </div>
+                    </form>
+                  </div>
+                  <div class="form-response show"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="row">
+            <div class="column width-12">
+              <div class="footer-bottom-inner">
+                <p class="copyright pull-left">&copy; Divi. All Rights Reserved.</p>
+                <a href="#" class="scroll-to-top pull-right" data-no-hide>Top</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- Footer End -->
+    </div>
+  </div>
+  {{ghost_foot}}
+  <script type="text/javascript" src="{{asset "js/master.min.js"}}"></script>
+  <script type="text/javascript" src="{{asset "js/master.js"}}"></script>
+  <script type="text/javascript" src="{{asset "js/min.js"}}"></script>
+</body>
+
 </html>
