--- a/page.hbs
+++ b/page.hbs
@@ -3,14 +3,52 @@
 {{> "site-header"}}
 
 <main role="main">
-  <article class="{{post_class}}">
-    {{#post}}
-      <h1>
-        {{{title}}}
-      </h1>
-      <section>
-        {{content}}
-      </section>
-    {{/post}}
-  </article>
+  <div class="section-block content-inner">
+    <div class="blog-masonry grid-container fade-in-progressively" data-layout-mode="masonry" data-grid-ratio="1.5" data-animate-resize data-animate-resize-duration="0">
+      <div class="row">
+        <div class="column width-12">
+          <div class="row grid content-grid-3 clearfix">
+            
+
+                {{#post}}
+                  <div class="grid-item">
+                    <article class="post">
+                      <div class="post-media">
+                        <div class="thumbnail img-scale-in" data-hover-easing="easeInOut" data-hover-speed="700" data-hover-bkg-color="#ffffff" data-hover-bkg-opacity="0.9">
+                          <a class="overlay-link" href="{{url}}">
+                            <img src="{{feature_image}}" alt=""/>
+                            <span class="overlay-info">
+                              <span>
+                                <span>
+                                  {{{title}}}
+                                </span>
+                              </span>
+                            </span>
+                          </a>
+                        </div>
+                      </div>
+                      <div class="post-content with-background">
+                        <h2 class="post-title"><a href={{url}}>{{{title}}}</a></h2>
+                        <div class="post-info">
+                          <span class="post-date">
+                            <time datetime="{{date format="YYYY-MM-DD"}}">
+                              {{date format='DD MMM YYYY'}}
+                            </time>
+                          </span>/<span class="post-love"><a href="#" class="post-love"><span class="icon-heart"></span>234</a></span>
+                        </div>
+                        <section>
+                          <p>{{content words="100"}}</p>
+                        </section>
+                    </div>
+                  </article>
+                </div>
+              {{/post}}
+
+              
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
+        
