--- a/post.hbs
+++ b/post.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 
-{{> "site-header"}}
+{{> "navbar"}}
 
 {{#post}}
   <main role="main">
@@ -52,58 +52,56 @@
                 </div>
 							</article>
             </div>
+            <aside class="column width-3 sidebar right">
+              <div class="sidebar-inner">
+                <div class="widget">
+                  <div class="box bkg-grey-ultralight mb-50">
+                    <h3 class="widget-title">About</h3>
+                    <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate.<p>
+                  </div>
+                </div>
+                <div class="widget">
+                  <h3 class="widget-title">Related Categories</h3>
+                  <ul>
+                    {{#foreach tags}}
+                      <li><a href="{{url}}" title={{name}}>{{name}}</a></li>
+                    {{/foreach}}
+                  </ul>
+                </div>
+
+                {{> "recent-posts"}}
+
+              </div>
+            </aside>
           </div>
-
-
-
-
-
-
-
-
-
-        
-        {{tags prefix=(t " on ") separator=" | "}}
-        
       </header>
-      {{!-- <footer>
-        <section>
-          {{#if author.profile_image}}
-            <figure>
-              <img src="{{author.profile_image}}" alt="{{{t '{name}’s Picture' name=name }}}">
-            </figure>
-          {{/if}}
-          <p>
-            {{author.bio}}
-          </p>
-          <ul>
-            {{#if author.location}}
-              <li>
-                {{author.location}}
-              </li>
-            {{/if}}
-            {{#if author.website}}
-              <li>
-                <a href="{{author.website}}">
-                  {{author.website}}
-                </a>
-              </li>
-            {{/if}}
-          </ul>
-        </section>
-        <section>
-          {{t "Share this post"}}
-          <a href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
-            onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-            {{t "Twitter"}}
-          </a>
-          {{t " or "}}
-          <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
-            onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-            {{t "Facebook"}}
-          </a>
-        </section>
-      </footer> --}}
+      
+      {{> "post-pagination"}}
+      
     </article>
   </main>
 {{/post}}
+
+
+<!-- Sidebar -->
+{{!-- <aside class="column width-3 sidebar right">
+  <div class="sidebar-inner">
+    <div class="widget">
+      <h3 class="widget-title">Find Something</h3>
+      <div class="search-form-container site-search">
+        <form action="#" method="get" novalidate>
+          <div class="row">
+            <div class="column width-12">
+              <div class="field-wrapper">
+                <input type="text" name="search" class="form-search form-element" placeholder="type &amp; hit enter...">
+                <span class="border"></span>
+              </div>
+            </div>
+          </div>
+        </form>
+        <div class="form-response"></div>
+      </div>
+    </div>
+  </div>
+</aside> --}}
+<!-- Sidebar End -->
