--- a/partials/navbar.hbs
+++ b/partials/navbar.hbs
@@ -1,3 +1,54 @@
+<!-- Overlay Navigation Menu -->
+<div class="overlay-navigation-wrapper enter-right one-page-nav" data-no-scrollbar data-animation="slide-in">
+  <div class="overlay-navigation-scroll-pane">
+    <div class="overlay-navigation-inner">
+      <div class="v-align-middle">
+        <div class="overlay-navigation-header row collapse full-width">
+          <div class="column width-12">
+            <div class="navigation-hide overlay-nav-hide">
+              <a href="#">
+                <span class="icon-cancel"></span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row collapse full-width">
+          <div class="column width-12">
+            <nav class="overlay-navigation nav-block center">
+              <ul>
+                <li class="current">
+                  <a href="https://diviproject.org" data-offset="0" class="scroll-link">Home</a>
+                </li>
+                <li>
+                  <a href="https://diviproject.org/#features" data-offset="-60" class="scroll-link">Features</a>
+                </li>
+                <li>
+                  <a href="https://diviproject.org/#download" data-offset="-60" class="scroll-link">Download</a>
+                </li>
+                <li>
+                  <a href="https://diviproject.org/#whitepaper" data-offset="-60" class="scroll-link">White Paper</a>
+                </li>
+                <li>
+                  <a href="https://diviproject.org/#team" data-offset="-60" class="scroll-link">Team</a>
+                </li>
+                <li>
+                  <a href="https://blog.diviproject.org/" data-offset="-60" class="scroll-link">Blog</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="overlay-navigation-footer row full-width center">
+          <div class="column width-12 no-padding">
+            <p class="copyright">&copy; 2018 Divi. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+	<!-- Overlay Navigation Menu End -->
+
 <!-- Header -->
 <header class="header header-fixed header-fixed-on-mobile header-transparent nav-dark" data-bkg-threshold="10" data-compact-threshold="10">
   <div class="header-inner">
@@ -14,7 +65,7 @@
             <li>
               <!-- Button -->
               <div class="v-align-middle">
-                  <a href="#" class="button medium bkg-theme border-hover-grey-ultralight color-white color-hover-grey mb-60">
+                  <a href="https://www.cryptopia.co.nz/Exchange/?market=DIVX_BTC" class="button medium bkg-theme border-hover-grey-ultralight color-white color-hover-grey mb-60">
                       
                       Buy Divi
                     </a>
@@ -31,22 +82,22 @@
         <nav class="navigation nav-block primary-navigation nav-right">
           <ul>
             <li class="current">
-              <a href="#home" data-offset="0" class="scroll-link">Home</a>
+              <a href="https://diviproject.org" data-offset="0" class="scroll-link">Home</a>
             </li>
             <li>
-              <a href="#features" data-offset="-60" class="scroll-link">Features</a>
+              <a href="https://diviproject.org/#features" data-offset="-60" class="scroll-link">Features</a>
             </li>
             <li>
-              <a href="#devices" data-offset="-60" class="scroll-link">Download</a>
+              <a href="https://diviproject.org/#download" data-offset="-60" class="scroll-link">Download</a>
             </li>
             <li>
-              <a href="#whitepaper" data-offset="-60" class="scroll-link">White Paper</a>
+              <a href="https://diviproject.org/#whitepaper" data-offset="-60" class="scroll-link">White Paper</a>
             </li>
             <li>
-              <a href="#team" data-offset="-60" class="scroll-link">Team</a>
+              <a href="https://diviproject.org/#team" data-offset="-60" class="scroll-link">Team</a>
             </li>
             <li>
-              <a href="#blog" data-offset="-60" class="scroll-link">Blog</a>
+              <a href="https://blog.diviproject.org/" data-offset="-60" class="scroll-link">Blog</a>
             </li>
           </ul>
         </nav>
