--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -15,7 +15,7 @@
                 {{/if}}
             </li>
             
-          <span class="page-number">Page {{page}} of {{pages}}</span>
+          {{!-- <span class="page-number">Page {{page}} of {{pages}}</span> --}}
           {{#if next}}
             <li>
               <a class="newer-posts pagination-previous icon-left-open" href="{{url}}">
