--- a/default.hbs
+++ b/default.hbs
@@ -28,32 +28,32 @@
                 <ul class="social-list list-horizontal">
                   <li>
                     <a href="https://twitter.com/diviproject">
-                      <span className="icon-twitter-with-circle medium"></span>
+                      <span class="icon-twitter-with-circle medium"></span>
                     </a>
                   </li>
                   <li>
                     <a href="https://facebook.com/diviproject">
-                      <span className="icon-facebook-with-circle medium"></span>
+                      <span class="icon-facebook-with-circle medium"></span>
                     </a>
                   </li>
                   <li>
                     <a href="https://github.com/divicoin">
-                      <span className="icon-github-with-circle medium"></span>
+                      <span class="icon-github-with-circle medium"></span>
                     </a>
                   </li>
                   <li>
                     <a href="https://www.youtube.com/channel/UCihooU0crqQkBOvV0_lsRnw?view_as=subscriber">
-                      <span className="icon-youtube-with-circle medium"></span>
+                      <span class="icon-youtube-with-circle medium"></span>
                     </a>
                   </li>
                   <li>
                     <a href="https://www.linkedin.com/company/the-divi-project/">
-                      <span className="icon-linkedin-with-circle medium"></span>
+                      <span class="icon-linkedin-with-circle medium"></span>
                     </a>
                   </li>
                   <li>
                     <a href="https://medium.com/diviproject">
-                      <span className="icon-medium-with-circle medium"></span>
+                      <span class="icon-medium-with-circle medium"></span>
                     </a>
                   </li>
                 </ul>
@@ -68,30 +68,29 @@
                 <div class="signup-form-container">
                   <div id="mc_embed_signup">
                     <form action="https://diviproject.us16.list-manage.com/subscribe/post?u=042c6fe1249d1d0fcbdd2c9dc&amp;id=3a480d062b" method="post"
-                      id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" className="validate signup-form merged-form-elements"
+                      id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate signup-form merged-form-elements"
                       target="_blank" noValidate>
-                      <div className="row">
-                        <div className="column width-7">
-                          <div className="field-wrapper">
-                            <input type="email" name="email" className="email form-email form-element" tabIndex="2" placeholder="Email address" id="mce-EMAIL"
-                            />
+                      <div class="row">
+                        <div class="column width-7">
+                          <div class="field-wrapper">
+                            <input type="email" name="email" class="email form-email form-element" tabIndex="2" placeholder="Email address" id="mce-EMAIL"/>
                           </div>
                         </div>
-                        <div className="column width-4">
+                        <div class="column width-4">
                           <div aria-hidden="true">
                             <input style="position: absolute; left: -5000px;" type="text" name="b_042c6fe1249d1d0fcbdd2c9dc_3a480d062b"
                               tabIndex="-1" value="" />
                           </div>
-                          <input type="submit" value="Signup" name="subscribe" id="mc-embedded-subscribe" className="button bkg-charcoal bkg-hover-theme color-white color-hover-white"
+                          <input type="submit" value="Signup" name="subscribe" id="mc-embedded-subscribe" class="button bkg-charcoal bkg-hover-theme color-white color-hover-white"
                           />
                         </div>
                       </div>
                       <div id="mc_embed_signup_scroll">
 
                         {{!-- /* DO NOT REMOVE */ --}}
-                        <div id="mce-responses" className="clear">
-                          <div className="response" id="mce-error-response" style="display: none;"></div>
-                          <div className="response" id="mce-success-response" style="display: none;"></div>
+                        <div id="mce-responses" class="clear">
+                          <div class="response" id="mce-error-response" style="display: none;"></div>
+                          <div class="response" id="mce-success-response" style="display: none;"></div>
                         </div>
                         {{!-- /* ^ DO NOT REMOVE ^ */ --}}
 
@@ -124,8 +123,6 @@
   </script>
   <script type="text/javascript" src="{{asset "js/infinitescroll.js"}}"></script>
   <script type="text/javascript" src="{{asset "js/master.min.js"}}"></script>
-  <script type="text/javascript" src="{{asset "js/master.js"}}"></script>
-  <script type="text/javascript" src="{{asset "js/min.js"}}"></script>
 </body>
 
 </html>
