--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -30,14 +30,15 @@
                       <time datetime="{{date format=" YYYY-MM-DD "}}">
                         {{date format='DD MMM YYYY'}}
                       </time>
-                    </span>/
+                    </span>
+                    {{!-- /
                     <span class="post-love">
                       <a href="#" class="post-love">
                         <span class="icon-heart"></span>234</a>
-                    </span>
+                    </span> --}}
                   </div>
                   <section>
-                    <p>{{content words="100"}}</p>
+                    <p>{{content words="25"}}</p>
                   </section>
                 </div>
               </article>
@@ -68,11 +69,12 @@
                       <time datetime="{{date format=" YYYY-MM-DD "}}">
                         {{date format='DD MMM YYYY'}}
                       </time>
-                    </span>/
+                    </span>
+                    {{!-- /
                     <span class="post-love">
                       <a href="#" class="post-love">
                         <span class="icon-heart"></span>234</a>
-                    </span>
+                    </span> --}}
                   </div>
                   <section>
                     <p>{{content words="25"}}</p>
@@ -87,3 +89,4 @@
     </div>
   </div>
 </div>
+{{> "pagination"}}
