replace lorem ipsum, update nav

--- a/author.hbs
+++ b/author.hbs
@@ -1,4 +1,5 @@
 {{!< default}}
+
 <!-- Overlay Navigation Menu -->
 <div class="overlay-navigation-wrapper enter-right one-page-nav" data-no-scrollbar data-animation="slide-in">
   <div class="overlay-navigation-scroll-pane">
@@ -20,14 +21,14 @@
                 <li class="current">
                   <a href="https://diviproject.org" data-offset="0" class="scroll-link">Home</a>
                 </li>
-                <li>
+                {{!-- <li>
                   <a href="https://diviproject.org/#features" data-offset="-60" class="scroll-link">Features</a>
-                </li>
-                <li>
+                </li> --}}
+                {{!-- <li>
                   <a href="https://diviproject.org/#download" data-offset="-60" class="scroll-link">Download</a>
-                </li>
+                </li> --}}
                 <li>
-                  <a href="https://diviproject.org/#whitepaper" data-offset="-60" class="scroll-link">White Paper</a>
+                  <a href="https://diviproject.org/assets/files/wp-en.pdf" data-offset="-60" class="scroll-link">White Paper</a>
                 </li>
                 <li>
                   <a href="https://diviproject.org/#team" data-offset="-60" class="scroll-link">Team</a>
@@ -48,7 +49,7 @@
     </div>
   </div>
 </div>
-	<!-- Overlay Navigation Menu End -->
+<!-- Overlay Navigation Menu End -->
 
 <!-- Header -->
 <header class="header header-fixed header-fixed-on-mobile header-transparent nav-dark" data-bkg-threshold="10" data-compact-threshold="10">
@@ -85,14 +86,14 @@
             <li class="current">
               <a href="https://diviproject.org" data-offset="0" class="scroll-link">Home</a>
             </li>
-            <li>
+            {{!-- <li>
               <a href="https://diviproject.org/#features" data-offset="-60" class="scroll-link">Features</a>
-            </li>
-            <li>
+            </li> --}}
+            {{!-- <li>
               <a href="https://diviproject.org/#download" data-offset="-60" class="scroll-link">Download</a>
-            </li>
+            </li> --}}
             <li>
-              <a href="https://diviproject.org/#whitepaper" data-offset="-60" class="scroll-link">White Paper</a>
+              <a href="https://diviproject.org/assets/files/wp-en.pdf" data-offset="-60" class="scroll-link">White Paper</a>
             </li>
             <li>
               <a href="https://diviproject.org/#team" data-offset="-60" class="scroll-link">Team</a>
@@ -153,12 +154,6 @@
         </div>
       </div>
     </div>
-          
-       
-            
-            
-    
-  
 {{/author}}
 
 <main role="main">
