--- a/default.hbs
+++ b/default.hbs
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="twitter:widgets:theme" content="light">
+	<meta property="og:title" content="Divi Blog - Masternodes made easy" />
+	<meta property="og:type" content="website" />
+	{{!-- <meta property="og:image" content="Your-Image-Url" /> --}}
+	<meta property="og:description" content="Divi Project official blog. Information and news directly from the Divi team." />
   <title>{{meta_title}}</title>
   <link rel="stylesheet" type="text/css" href="{{asset "css/core.min.css"}}">
   <link rel="stylesheet" type="text/css" href="{{asset "css/skin.css"}}"> 
@@ -23,8 +28,7 @@
             <div class="column width-6">
               <div class="widget">
                 <h4 class="widget-title">Masternodes made easy&trade;</h4>
-                <p class="mb-20">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                  sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="mb-20">The Divi Masternode software takes the stress out of earning cryptocurrency. Divi's one-click setup process is as simple as setting up an account online and let's your computer work for you. It's time your computer became your side hustle.</p>
                 <ul class="social-list list-horizontal">
                   <li>
                     <a href="https://twitter.com/diviproject">
@@ -62,9 +66,8 @@
             </div>
             <div class="column width-5 offset-1">
               <div class="widget">
-                <h4 class="widget-title">Get Notified Of Updates</h4>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                  sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h4 class="widget-title">Always get the latest</h4>
+                <p>Sign up for news and updates from the Divi team delivered directly to your inbox.</p>
                 <div class="signup-form-container">
                   <div id="mc_embed_signup">
                     <form action="https://diviproject.us16.list-manage.com/subscribe/post?u=042c6fe1249d1d0fcbdd2c9dc&amp;id=3a480d062b" method="post"
