--- a/post.hbs
+++ b/post.hbs
@@ -6,11 +6,12 @@
   <main role="main">
     <article class="{{post_class}}">
       <header>
+
         <!-- Intro Title Section 2 -->
 				<div class="section-block intro-title-2 intro-title-2-4" 
-        {{#if feature_image}}
-          style="background-image: url({{feature_image}})"
-        {{/if}}
+          {{#if feature_image}}
+            style="background-image: url({{feature_image}})"
+          {{/if}}
         >
 					<div class="row">
 						<div class="column width-12">
@@ -40,21 +41,9 @@
 							</div>
 						</div>
 					</div>
-
           <div class="row">
             <div class="column width-9 content-inner blog-single-post">
               <article class="post">
-								
-								{{!-- <div class="post-media">
-									<div class="video-container">
-										{{#if feature_image}}
-                      <figure>
-                        <img src="{{feature_image}}">
-                      </figure>
-                    {{/if}}
-									</div>
-								</div> --}}
-	
 								<div class="post-content">
 									{{content}}
                 </div>
@@ -65,7 +54,7 @@
                 <div class="widget">
                   <div class="box bkg-grey-ultralight mb-50">
                     <h3 class="widget-title">About</h3>
-                    <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate.<p>
+                    <p>The Divi Masternode software takes the stress out of earning cryptocurrency. Divi's one-click setup process is as simple as setting up an account online and let's your computer work for you. It's time your computer became your side hustle.<p>
                   </div>
                 </div>
                 <div class="widget">
@@ -89,27 +78,3 @@
     </article>
   </main>
 {{/post}}
-
-
-<!-- Sidebar -->
-{{!-- <aside class="column width-3 sidebar right">
-  <div class="sidebar-inner">
-    <div class="widget">
-      <h3 class="widget-title">Find Something</h3>
-      <div class="search-form-container site-search">
-        <form action="#" method="get" novalidate>
-          <div class="row">
-            <div class="column width-12">
-              <div class="field-wrapper">
-                <input type="text" name="search" class="form-search form-element" placeholder="type &amp; hit enter...">
-                <span class="border"></span>
-              </div>
-            </div>
-          </div>
-        </form>
-        <div class="form-response"></div>
-      </div>
-    </div>
-  </div>
-</aside> --}}
-<!-- Sidebar End -->
