--- a/tag.hbs
+++ b/tag.hbs
@@ -21,14 +21,14 @@
                 <li class="current">
                   <a href="https://diviproject.org" data-offset="0" class="scroll-link">Home</a>
                 </li>
-                <li>
+                {{!-- <li>
                   <a href="https://diviproject.org/#features" data-offset="-60" class="scroll-link">Features</a>
-                </li>
-                <li>
+                </li> --}}
+                {{!-- <li>
                   <a href="https://diviproject.org/#download" data-offset="-60" class="scroll-link">Download</a>
-                </li>
+                </li> --}}
                 <li>
-                  <a href="https://diviproject.org/#whitepaper" data-offset="-60" class="scroll-link">White Paper</a>
+                  <a href="https://diviproject.org/assets/files/wp-en.pdf" data-offset="-60" class="scroll-link">White Paper</a>
                 </li>
                 <li>
                   <a href="https://diviproject.org/#team" data-offset="-60" class="scroll-link">Team</a>
@@ -86,14 +86,14 @@
             <li class="current">
               <a href="https://diviproject.org" data-offset="0" class="scroll-link">Home</a>
             </li>
-            <li>
+            {{!-- <li>
               <a href="https://diviproject.org/#features" data-offset="-60" class="scroll-link">Features</a>
-            </li>
-            <li>
+            </li> --}}
+            {{!-- <li>
               <a href="https://diviproject.org/#download" data-offset="-60" class="scroll-link">Download</a>
-            </li>
+            </li> --}}
             <li>
-              <a href="https://diviproject.org/#whitepaper" data-offset="-60" class="scroll-link">White Paper</a>
+              <a href="https://diviproject.org/assets/files/wp-en.pdf" data-offset="-60" class="scroll-link">White Paper</a>
             </li>
             <li>
               <a href="https://diviproject.org/#team" data-offset="-60" class="scroll-link">Team</a>
