updated nav links

--- a/partials/navbar.hbs
+++ b/partials/navbar.hbs
@@ -65,7 +65,7 @@
             <li>
               <!-- Button -->
               <div class="v-align-middle">
-                  <a href="https://www.cryptopia.co.nz/Exchange/?market=DIVX_BTC" class="button medium bkg-theme border-hover-grey-ultralight color-white color-hover-grey mb-60">
+                  <a href="https://www.cryptopia.co.nz/Exchange/?market=DIVI_BTC" class="button medium bkg-theme border-hover-grey-ultralight color-white color-hover-grey mb-60">
                       
                       Buy Divi
                     </a>
@@ -91,7 +91,7 @@
               <a href="https://diviproject.org/#download" data-offset="-60" class="scroll-link">Download</a>
             </li> --}}
             <li>
-              <a href="https://diviproject.org/assets/files/wp-en.pdf" data-offset="-60" class="scroll-link">White Paper</a>
+              <a href="https://wiki.diviproject.org/#whitepaper" data-offset="-60" class="scroll-link">White Paper</a>
             </li>
             <li>
               <a href="https://diviproject.org/#team" data-offset="-60" class="scroll-link">Team</a>
