--- a/author.hbs
+++ b/author.hbs
@@ -19,16 +19,13 @@
             <nav class="overlay-navigation nav-block center">
               <ul>
                 <li class="current">
-                  <a href="https://diviproject.org" data-offset="0" class="scroll-link">Home</a>
+                  <a href="https://blog.diviproject.org" data-offset="0" class="scroll-link">Home</a>
                 </li>
-                {{!-- <li>
-                  <a href="https://diviproject.org/#features" data-offset="-60" class="scroll-link">Features</a>
-                </li> --}}
-                {{!-- <li>
-                  <a href="https://diviproject.org/#download" data-offset="-60" class="scroll-link">Download</a>
-                </li> --}}
                 <li>
-                  <a href="https://diviproject.org/assets/files/wp-en.pdf" data-offset="-60" class="scroll-link">White Paper</a>
+                  <a href="https://diviproject.org/downloads" data-offset="-60" class="scroll-link">Download</a>
+                </li>
+                <li>
+                  <a href="https://wiki.diviproject.org/#whitepaper" data-offset="-60" class="scroll-link">White Paper</a>
                 </li>
                 <li>
                   <a href="https://diviproject.org/#team" data-offset="-60" class="scroll-link">Team</a>
