--- a/default.hbs
+++ b/default.hbs
@@ -12,6 +12,7 @@
   <title>{{meta_title}}</title>
   <link rel="stylesheet" type="text/css" href="{{asset "css/core.min.css"}}">
   <link rel="stylesheet" type="text/css" href="{{asset "css/skin.css"}}"> 
+  <link rel="canonical" href="https://blog.diviproject.org">
   {{ghost_head}}
 </head>
 
