--- a/default.hbs
+++ b/default.hbs
@@ -4,15 +4,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Cryptocurrency, Blockchain and Masternode information, news, and updates directly from the Divi team." />
 	<meta name="twitter:widgets:theme" content="light">
+  <meta name="twitter:card" content="summary" />
+	<meta name="twitter:image" content="https://preview.ibb.co/fxXk7y/hero_half_2.jpg" />
+	<meta name="twitter:title" content="Divi Project Blog: Cryptocurrency, Blockchain, and Masternode news and updates." />
+	<meta name="twitter:site" content="@DiviProject" />
 	<meta property="og:title" content="Divi Blog - Masternodes made easy" />
 	<meta property="og:type" content="website" />
-	{{!-- <meta property="og:image" content="Your-Image-Url" /> --}}
-	<meta property="og:description" content="Divi Project official blog. Information and news directly from the Divi team." />
+	<meta property="og:url" content="https://diviproject.org" />
+	<meta property="og:site_name" content="Divi Project Official Blog" />
+  <meta property="og:image" content="https://preview.ibb.co/fxXk7y/hero_half_2.jpg" />
+	<meta property="og:description" content="Cryptocurrency, Blockchain, and Masternode information, news, and updates directly from the Divi team." />
   <title>{{meta_title}}</title>
   <link rel="stylesheet" type="text/css" href="{{asset "css/core.min.css"}}">
   <link rel="stylesheet" type="text/css" href="{{asset "css/skin.css"}}"> 
-  <link rel="canonical" href="https://blog.diviproject.org">
+  <link rel="alternate" href="https://blog.diviproject.org" hreflang="x-default" />
+  <link rel="canonical" href="https://blog.diviproject.org" />
   {{ghost_head}}
 </head>
 
