--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -10,7 +10,7 @@
                 <div class="post-media">
                   <div class="thumbnail img-scale-in" data-hover-easing="easeInOut" data-hover-speed="700" data-hover-bkg-color="#ffffff" data-hover-bkg-opacity="0.9">
                     <a class="overlay-link" href="{{url}}">
-                      <img src="{{feature_image}}" alt="" />
+                      <img src="{{feature_image}}" alt="featured-image" />
                       <span class="overlay-info">
                         <span>
                           <span>
@@ -44,7 +44,7 @@
                 <div class="post-media">
                   <div class="thumbnail img-scale-in" data-hover-easing="easeInOut" data-hover-speed="700" data-hover-bkg-color="#ffffff" data-hover-bkg-opacity="0.9">
                     <a class="overlay-link" href="{{url}}">
-                      <img src="{{feature_image}}" alt="" />
+                      <img src="{{feature_image}}" alt="featured-image" />
                       <span class="overlay-info">
                         <span>
                           <span>
