--- a/partials/navbar.hbs
+++ b/partials/navbar.hbs
@@ -82,10 +82,10 @@
               <a href="https://diviproject.org" data-offset="0" class="scroll-link">Home</a>
             </li>
             {{!-- <li>
-              <a href="https://diviproject.org/#features" data-offset="-60" class="scroll-link">Features</a>
+              <a href="https://diviproject.org/features" data-offset="-60" class="scroll-link">Features</a>
             </li> --}}
             {{!-- <li>
-              <a href="https://diviproject.org/#download" data-offset="-60" class="scroll-link">Download</a>
+              <a href="https://diviproject.org/download" data-offset="-60" class="scroll-link">Download</a>
             </li> --}}
             <li>
               <a href="https://wiki.diviproject.org/#whitepaper" data-offset="-60" class="scroll-link">White Paper</a>
