canonical handled by ghost installation

--- a/partials/navbar.hbs
+++ b/partials/navbar.hbs
@@ -62,7 +62,7 @@
             <li>
               <!-- Button -->
               <div class="v-align-middle">
-                  <a href="https://www.cryptopia.co.nz/Exchange/?market=DIVI_BTC" class="button medium bkg-theme border-hover-grey-ultralight color-white color-hover-grey mb-60">
+                  <a href="https://wiki.diviproject.org/#exchanges" class="button medium bkg-theme border-hover-grey-ultralight color-white color-hover-grey mb-60">
                       
                       Buy Divi
                     </a>
