--- a/tag.hbs
+++ b/tag.hbs
@@ -65,7 +65,7 @@
             <li>
               <!-- Button -->
               <div class="v-align-middle">
-                  <a href="https://www.cryptopia.co.nz/Exchange/?market=DIVX_BTC" class="button medium bkg-theme border-hover-grey-ultralight color-white color-hover-grey mb-60">
+                  <a href="https://wiki.diviproject.org/#exchanges" class="button medium bkg-theme border-hover-grey-ultralight color-white color-hover-grey mb-60">
                       
                       Buy Divi
                     </a>
