--- a/default.hbs
+++ b/default.hbs
@@ -7,14 +7,14 @@
   <meta name="description" content="Cryptocurrency, Blockchain and Masternode information, news, and updates directly from the Divi team." />
 	<meta name="twitter:widgets:theme" content="light">
   <meta name="twitter:card" content="summary" />
-	<meta name="twitter:image" content="https://preview.ibb.co/fxXk7y/hero_half_2.jpg" />
+	<meta name="twitter:image" content="https://i.ibb.co/pfVJmjG/Divi-facebook.png" />
 	<meta name="twitter:title" content="Divi Project Blog: Cryptocurrency, Blockchain, and Masternode news and updates." />
 	<meta name="twitter:site" content="@DiviProject" />
 	<meta property="og:title" content="Divi Blog - Masternodes made easy" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://diviproject.org" />
 	<meta property="og:site_name" content="Divi Project Official Blog" />
-  <meta property="og:image" content="https://preview.ibb.co/fxXk7y/hero_half_2.jpg" />
+  <meta property="og:image" content="https://i.ibb.co/pfVJmjG/Divi-facebook.png" />
 	<meta property="og:description" content="Cryptocurrency, Blockchain, and Masternode information, news, and updates directly from the Divi team." />
   <title>{{meta_title}}</title>
   <link rel="stylesheet" type="text/css" href="{{asset "css/core.min.css"}}">
