update navbar and logo

--- a/partials/navbar.hbs
+++ b/partials/navbar.hbs
@@ -47,7 +47,7 @@
 	<!-- Overlay Navigation Menu End -->
 
 <!-- Header -->
-<header class="header header-fixed header-fixed-on-mobile header-transparent nav-dark" data-bkg-threshold="10" data-compact-threshold="10">
+<header class="header header-fixed header-fixed-on-mobile nav-dark" data-bkg-threshold="10" data-compact-threshold="10">
   <div class="header-inner">
     <div class="row nav-bar">
       <div class="column width-12 nav-bar-inner">
@@ -84,9 +84,9 @@
             {{!-- <li>
               <a href="https://diviproject.org/features" data-offset="-60" class="scroll-link">Features</a>
             </li> --}}
-            {{!-- <li>
+            <li>
               <a href="https://diviproject.org/download" data-offset="-60" class="scroll-link">Download</a>
-            </li> --}}
+            </li>
             <li>
               <a href="https://wiki.diviproject.org/#whitepaper" data-offset="-60" class="scroll-link">White Paper</a>
             </li>
