--- a/author.hbs
+++ b/author.hbs
@@ -56,7 +56,7 @@
         <div class="logo">
           <div class="logo-inner">
             <a href="https://diviproject.org"><img src="../../assets/images/logo-dark.png" alt="Divi Logo" /></a>
-            <a href="https://diviproject.org"><img src="../../assets/images/logo.png" alt="Divi Logo" /></a>
+            <a href="https://diviproject.org"><img src="../../assets/images/logo-dark.png" alt="Divi Logo" /></a>
           </div>
         </div>
         <nav class="navigation nav-block secondary-navigation nav-right">
